Configure base styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
-
-$font-base: 20px;
-$font-heading: 2rem;
-$font-section-heading: 2rem;
-$font-subheading: 1.2rem;
-
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
-  font-size: $font-base;
+  font-size: 20px;
 }
 
 body {
@@ -33,3 +28,4 @@ ul {
 .container {
   padding: 0 1.2rem;
 }
+/*# sourceMappingURL=main.css.map */
