--- a/styles/main.css
+++ b/styles/main.css
@@ -51,4 +51,21 @@ ul {
   font-size: 20px;
   text-align: center;
 }
+
+.mobile-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0.5rem 0;
+}
+
+.mobile-nav__logo {
+  font-weight: 600;
+}
 /*# sourceMappingURL=main.css.map */
