--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,12 @@ ul {
   text-align: center;
 }
 
+.btn-arrow {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
 .mobile-nav {
   display: -webkit-box;
   display: -ms-flexbox;
