Fixed header subtitle tag in the hero section

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,9 +1,9 @@
 .heading {
   font-size: $font-heading;
-  text-align: center;
   line-height: 2.6rem;
 
-  span {
+  &--subtitle {
+    font-size: $font-heading;
     color: $color-primary;
   }
 }
