Fix the path to the hero image

--- a/styles/main.css
+++ b/styles/main.css
@@ -76,7 +76,7 @@ ul {
 }
 
 .section-hero {
-  background-image: url(../../images/mobile/header-illsutration-mobile.svg);
+  background-image: url(../images/mobile/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 50% 0;
