--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -1,5 +1,5 @@
 .section-hero {
-  background-image: url(../../images/mobile/header-illsutration-mobile.svg);
+  background-image: url(../images/mobile/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 50% 0;
