Style the works section, style the card component

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -21,6 +21,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 a {
   text-decoration: none;
   color: inherit;
