--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,3 +5,5 @@
 @import "components/header";
 @import "components/hero";
 @import "components/socials";
+@import "components/works";
+@import "components/card";
