--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -1,3 +1,13 @@
 .btn-arrow {
   align-self: center;
 }
+
+.btn-cta {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: $color-white;
+  border: none;
+  background-color: $color-primary;
+  border-radius: 4px;
+  padding: 0.6em;
+}
