--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -41,10 +45,26 @@ ul {
 
 .section-heading {
   font-size: 2rem;
+  text-align: center;
+  position: relative;
+  margin-bottom: 4.5rem;
+}
+
+.section-heading::after {
+  position: absolute;
+  left: 50%;
+  bottom: -1.2rem;
+  content: "";
+  width: 48px;
+  height: 4px;
+  background-color: #ff6163;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .subheading {
   font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .base-text {
@@ -56,6 +76,16 @@ ul {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+.btn-cta {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #fff;
+  border: none;
+  background-color: #ff6163;
+  border-radius: 4px;
+  padding: 0.6em;
 }
 
 .mobile-nav {
@@ -116,5 +146,60 @@ ul {
 
 .socials__item:last-of-type {
   margin-right: 0;
+}
+
+.section-works__projects {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[5];
+      grid-template-rows: repeat(5, 1fr);
+  grid-row-gap: 1.2rem;
+}
+
+.card {
+  background-color: #f9eaea;
+  border: 1px solid #c1c7d0;
+  border-radius: 8px;
+  position: relative;
+}
+
+.card__portfolio-info {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 8px;
+  background-color: #fff;
+  padding: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.8rem;
+}
+
+.card__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 0.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card__list-item {
+  font-size: 0.6rem;
+  background-color: #f9eaea;
+  padding: 0.5em 0.6em;
+  border-radius: 4px;
 }
 /*# sourceMappingURL=main.css.map */
