--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -12,18 +12,19 @@
   font-size: $font-section-heading;
   text-align: center;
   position: relative;
-  margin-bottom: 4.5rem;
 
-  &::after {
-    position: absolute;
-    left: 50%;
-    bottom: -1.2rem;
+  &--underlined {
+    &::after {
+      position: absolute;
+      left: 50%;
+      bottom: -1.2rem;
 
-    content: "";
-    width: 48px;
-    height: 4px;
-    background-color: $color-primary;
-    transform: translateX(-50%);
+      content: "";
+      width: 48px;
+      height: 4px;
+      background-color: $color-primary;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -35,4 +36,5 @@
 .base-text {
   font-size: $font-base;
   text-align: center;
+  line-height: 30px;
 }
