--- a/styles/_works.scss
+++ b/styles/_works.scss
@@ -1,4 +1,10 @@
 .section-works {
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 4.5rem;
+  }
+
   &__projects {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
