--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,8 +2,9 @@
 @import "base";
 @import "typography";
 @import "components/buttons";
-@import "components/header";
-@import "components/hero";
+@import "header";
+@import "hero";
 @import "components/socials";
-@import "components/works";
+@import "works";
 @import "components/card";
+@import "about";
