--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -3,5 +3,15 @@
   flex-direction: column;
   gap: 1.2rem;
   align-items: center;
+
   padding: 1.5rem 0;
+
+  &__skills {
+    margin-top: 1.5rem;
+
+    .container {
+      display: grid;
+      grid-gap: 1.2rem;
+    }
+  }
 }
