--- a/styles/_works.scss
+++ b/styles/_works.scss
@@ -1,4 +1,5 @@
 .section-works {
+  padding: 1.2rem 0;
   .container {
     display: flex;
     flex-direction: column;
@@ -7,7 +8,6 @@
 
   &__projects {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
     grid-row-gap: 1.2rem;
   }
 }
