--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -12,6 +12,7 @@
     border-radius: 8px;
     background-color: $color-white;
     padding: 1.2rem;
+    width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -31,5 +32,30 @@
     background-color: $color-secondary-light;
     padding: 0.5em 0.6em;
     border-radius: 4px;
+
+    &--skill {
+      background-color: $color-white;
+      color: $color-primary;
+    }
+  }
+
+  &__skills {
+    padding: 1.2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+  }
+
+  &__icon {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: $color-white;
+    margin: 2rem 0 3rem;
+
+    display: grid;
+    place-content: center;
   }
 }
