--- a/styles/main.css
+++ b/styles/main.css
@@ -163,6 +163,9 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 4.5rem;
 }
 
