Fix Stylelint linter errors

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -14,7 +14,7 @@
 
   &:hover {
     background-color: rgba($color-primary, 0.9);
-    box-shadow: 0px 8px 16px rgba(255, 97, 99, 0.24);
+    box-shadow: 0 8px 16px rgba(255, 97, 99, 0.24);
   }
 
   &:active {
