Add background image to the about section

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -4,6 +4,10 @@
   gap: 1.2rem;
   align-items: center;
   padding: 1.5rem 0;
+  background-image: url(../images/mobile/illustration-about-me-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0% 0%;
 
   &__skills {
     margin-top: 1.5rem;
