--- a/styles/main.css
+++ b/styles/main.css
@@ -75,6 +75,13 @@ ul {
   line-height: 30px;
 }
 
+.text-bold {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #172b4d;
+  text-align: center;
+}
+
 .btn-arrow {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
