--- a/styles/main.css
+++ b/styles/main.css
@@ -300,4 +300,37 @@ ul {
   display: grid;
   grid-gap: 1.2rem;
 }
+
+.section-contact .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 58px;
+}
+
+.contact-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-form input {
+  width: 100%;
+}
+
+.contact-form textarea {
+  width: 100%;
+}
 /*# sourceMappingURL=main.css.map */
