Style the contact form and add formspree configurations to the html form

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -11,11 +11,13 @@
   flex-direction: column;
   gap: 1.2rem;
   align-items: center;
-  input {
-    width: 100%;
-  }
 
-  textarea {
+  &__textarea,
+  &__input {
     width: 100%;
+    padding: 0.5rem;
+    font-family: inherit;
+    border: 1px solid #d0d9d4;
+    border-radius: 4px;
   }
 }
