--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -4,6 +4,10 @@
     flex-direction: column;
     gap: 58px;
   }
+
+  background-image: url(../images/mobile/illustration-contact-form.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%
 }
 
 .contact-form {
