Finish styling mobile footer

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -7,7 +7,7 @@
 
   background-image: url(../images/mobile/illustration-contact-form.svg);
   background-repeat: no-repeat;
-  background-position: 50% 50%
+  background-position: 100% 100%;
 }
 
 .contact-form {
