--- a/styles/main.css
+++ b/styles/main.css
@@ -304,7 +304,7 @@ ul {
 .section-contact {
   background-image: url(../images/mobile/illustration-contact-form.svg);
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 100% 100%;
 }
 
 .section-contact .container {
@@ -338,5 +338,13 @@ ul {
   font-family: inherit;
   border: 1px solid #d0d9d4;
   border-radius: 4px;
+}
+
+.section-footer {
+  padding: 3rem 0;
+}
+
+.section-footer__socials {
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=main.css.map */
