Organize styles folder: add sections to the sections/ folder

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,11 +2,11 @@
 @import "base";
 @import "typography";
 @import "components/buttons";
-@import "header";
-@import "hero";
+@import "sections/header";
+@import "sections/hero";
 @import "components/socials";
-@import "works";
+@import "sections/works";
 @import "components/card";
-@import "about";
-@import "contact";
-@import "footer";
+@import "sections/about";
+@import "sections/contact";
+@import "sections/footer";
