--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,5 @@
 @import "components/card";
 @import "sections/about";
 @import "sections/contact";
+@import "components/contact-form";
 @import "sections/footer";
