--- a/styles/sections/_contact.scss
+++ b/styles/sections/_contact.scss
@@ -2,6 +2,7 @@
   background-image: url(../images/mobile/illustration-contact-form.svg);
   background-repeat: no-repeat;
   background-position: 100% 100%;
+  padding: 1.2rem 0;
 
   .container {
     display: flex;
