--- a/styles/sections/_hero.scss
+++ b/styles/sections/_hero.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 50% 0;
-  padding: 3rem 0;
+  padding: 3rem 0 1.2rem;
 
   &__text {
     text-align: center;
