--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -4,7 +4,28 @@
   justify-content: space-between;
   padding: 0.5rem 0;
 
+  @media (min-width: 700px) {
+    display: none;
+  }
+
   &__logo {
     font-weight: 600;
+  }
+}
+
+.desktop-nav {
+  display: none;
+
+  @media (min-width: 700px) {
+    display: block;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__el {
+    margin-right: 1.2rem;
   }
 }
