--- a/styles/sections/_works.scss
+++ b/styles/sections/_works.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     gap: 4.5rem;
+
+    @media (min-width: 1024px) {
+      gap: 2.6rem;
+    }
   }
 
   &__projects {
