Style responsive hero section

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -3,9 +3,18 @@
   line-height: 2.6rem;
   color: $color-dark;
 
+  @media (min-width: 700px) {
+    font-size: $font-heading--big;
+    line-height: 3rem;
+  }
+
   &--subtitle {
     font-size: $font-heading;
     color: $color-primary;
+
+    @media (min-width: 700px) {
+      font-size: $font-heading--big;
+    }
   }
 }
 
