--- a/styles/main.css
+++ b/styles/main.css
@@ -218,8 +218,10 @@ ul {
   }
 }
 
-.section-hero__socials {
-  margin-bottom: 4.2rem;
+@media (min-width: 700px) {
+  .section-hero__socials {
+    margin-bottom: 4.2rem;
+  }
 }
 
 .section-hero .container {
