--- a/styles/sections/_hero.scss
+++ b/styles/sections/_hero.scss
@@ -27,7 +27,9 @@
   }
 
   &__socials {
-    margin-bottom: 4.2rem;
+    @media (min-width: 700px) {
+      margin-bottom: 4.2rem;
+    }
   }
 
   .container {
