Set the desktop navbar list items to have 600 font weight

--- a/styles/main.css
+++ b/styles/main.css
@@ -175,6 +175,7 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-weight: 600;
 }
 
 .desktop-nav__el {
