--- a/styles/sections/_hero.scss
+++ b/styles/sections/_hero.scss
@@ -9,7 +9,11 @@
     background-image: url(../images/desktop/header-llustration-desktop.svg);
     background-position: 100% 0%;
     padding-top: 9rem;
-    height: 130vh;
+    min-height: 80vh;
+  }
+
+  @media (min-width: 1200px) {
+    min-height: 120vh;
   }
 
   &__text {
