--- a/styles/sections/_hero.scss
+++ b/styles/sections/_hero.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 100% 55px;
-  padding: 25vh 0;
+  padding: 25vh 0 1.2rem;
 
   @media (min-width: 700px) {
     background-position: 100% 0%;
