--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,7 @@ ul {
 .section-hero {
   background-image: url(../images/mobile/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
   background-position: 100% 55px;
   padding: 25vh 0 1.2rem;
 }
