--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -12,13 +12,16 @@
   padding: 0.6em;
   cursor: pointer;
   text-transform: capitalize;
+  transition: all 0.2s;
 
   &:hover {
     background-color: rgba($color-primary, 0.9);
     box-shadow: 0 8px 16px rgba(255, 97, 99, 0.24);
+    transform: translateY(-1px);
   }
 
   &:active {
     background-color: #dd5153;
+    transform: translateY(1px);
   }
 }
