Add transitions to the links

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,25 @@ img {
 a {
   text-decoration: none;
   color: inherit;
+  position: relative;
+}
+
+a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 2px;
+  background-color: #ff6163;
+  bottom: -5px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+a:hover::after {
+  width: 80%;
 }
 
 ul {
