Add form transitions

--- a/styles/main.css
+++ b/styles/main.css
@@ -507,6 +507,44 @@ ul {
   }
 }
 
+.section-contact__form input::-webkit-input-placeholder, .section-contact__form textarea::-webkit-input-placeholder {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.section-contact__form input:-ms-input-placeholder, .section-contact__form textarea:-ms-input-placeholder {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.section-contact__form input::-ms-input-placeholder, .section-contact__form textarea::-ms-input-placeholder {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.section-contact__form input::placeholder, .section-contact__form textarea::placeholder {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.section-contact__form input:hover::-webkit-input-placeholder, .section-contact__form textarea:hover::-webkit-input-placeholder {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+
+.section-contact__form input:hover:-ms-input-placeholder, .section-contact__form textarea:hover:-ms-input-placeholder {
+  transform: translateX(3px);
+}
+
+.section-contact__form input:hover::-ms-input-placeholder, .section-contact__form textarea:hover::-ms-input-placeholder {
+  transform: translateX(3px);
+}
+
+.section-contact__form input:hover::placeholder, .section-contact__form textarea:hover::placeholder {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+
 .section-contact .container {
   display: -webkit-box;
   display: -ms-flexbox;
