--- a/styles/sections/_contact.scss
+++ b/styles/sections/_contact.scss
@@ -24,6 +24,17 @@
       width: 55%;
       align-items: flex-start !important;
     }
+
+    input::placeholder, textarea::placeholder {
+      transition: all 0.2s;
+    }
+
+    input:hover, textarea:hover {
+      &::placeholder {
+        transform: translateX(3px);
+      }
+    }
+
   }
 
   .container {
