--- a/styles/sections/_contact.scss
+++ b/styles/sections/_contact.scss
@@ -20,21 +20,21 @@
   }
 
   &__form {
-    @media (min-width: 750px) {
-      width: 55%;
-      align-items: flex-start !important;
-    }
-
-    input::placeholder, textarea::placeholder {
+    &__input::placeholder,
+    &__textarea::placeholder {
       transition: all 0.2s;
     }
 
-    input:hover, textarea:hover {
+    &__input:hover,
+    &__textarea:hover {
       &::placeholder {
         transform: translateX(3px);
       }
     }
-
+    @media (min-width: 750px) {
+      width: 55%;
+      align-items: flex-start !important;
+    }
   }
 
   .container {
