--- a/styles/components/_contact-form.scss
+++ b/styles/components/_contact-form.scss
@@ -15,6 +15,7 @@
     &:focus {
       outline: none;
       border: 1px solid $color-primary;
+      background-color: rgba($color-secondary-light, 0.3);
     }
   }
 }
