--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -18,6 +18,29 @@
   &__logo {
     font-weight: 600;
   }
+
+  &__close {
+    z-index: 5;
+  }
+
+  &__list {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100vw;
+    height: 100vh;
+    background-color: $color-white;
+    padding-top: 5rem;
+    padding-left: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    a {
+      font-size: 1.5rem;
+    }
+  }
 }
 
 .desktop-nav {
