--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    transition: transform 0.3s;
 
     a {
       font-size: 1.5rem;
