--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -2,10 +2,13 @@
   background-color: $color-secondary-light;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 
   &__portfolio-img {
     width: 100%;
+    height: 10rem;
+    object-fit: cover;
   }
 
   &__portfolio-info {
@@ -14,13 +17,11 @@
     align-items: center;
     gap: 0.8rem;
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
     border-radius: 8px;
     background-color: $color-white;
     padding: 1.2rem;
     width: 100%;
+    height: 100%;
   }
 
   &__list {
