--- a/styles/main.css
+++ b/styles/main.css
@@ -418,11 +418,20 @@ ul {
   background-color: #f9eaea;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .card__portfolio-img {
   width: 100%;
+  height: 10rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .card__portfolio-info {
@@ -438,13 +447,11 @@ ul {
           align-items: center;
   gap: 0.8rem;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   border-radius: 8px;
   background-color: #fff;
   padding: 1.2rem;
   width: 100%;
+  height: 100%;
 }
 
 .card__list {
